examples/neg/parsing/val-in-interface.effekt
interface Foo {
  val x = 4
}

def main() = ()